--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
     rstudioapi
+URL: https://github.com/etiennebacher/ambiance
+BugReports: https://github.com/etiennebacher/ambiance/issues
